--- a/DotsConnect/android/app/src/main/res/values/strings.xml
+++ b/DotsConnect/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Dots.Connect</string>
+    <string name="app_name">com.dotsconnect.base.reactnative</string>
 </resources>
